@@ -106,6 +106,7 @@ INSTALL_LIB_OPT=\
 
 INSTALL_LIBDIR=$(DESTDIR)$(LIBDIR)
 INSTALL_BINDIR=$(DESTDIR)$(BINDIR)
+INSTALL_MANDIR=$(DESTDIR)$(MANDIR)
 
 ifeq ($(OCAML_NATIVE), true)
 all: byte native
@@ -282,6 +283,15 @@ endif
 	echo ']' >> ocamlbuild.install
 	echo >> ocamlbuild.install
 
+install-man:
+	cp man/ocamlbuild.1 $(INSTALL_MANDIR)/man1/ocamlbuild.1
+
+install-man-opam:
+	echo 'man: [' >> ocamlbuild.install
+	echo '  "man/ocamlbuild.1" {"man1/ocamlbuild.1"}' >> ocamlbuild.install
+	echo ']' >> ocamlbuild.install
+	echo >> ocamlbuild.install
+
 uninstall-bin:
 	rm $(BINDIR)/ocamlbuild
 	rm $(BINDIR)/ocamlbuild.byte
@@ -313,9 +323,12 @@ endif
 uninstall-lib-findlib:
 	ocamlfind remove ocamlbuild
 
+uninstall-man:
+	rm $(INSTALL_MANDIR)/man1/ocamlbuild.1
+
 install: check-if-preinstalled
-	$(MAKE) install-bin install-lib
-uninstall: uninstall-bin uninstall-lib
+	$(MAKE) install-bin install-lib install-man
+uninstall: uninstall-bin uninstall-lib uninstall-man
 
 findlib-install: check-if-preinstalled
 	$(MAKE) install-bin install-lib-findlib
@@ -329,6 +342,7 @@ ocamlbuild.install:
 	touch ocamlbuild.install
 	$(MAKE) install-bin-opam
 	$(MAKE) install-lib-opam
+	$(MAKE) install-man-opam
 
 check-if-preinstalled:
 ifeq ($(CHECK_IF_PREINSTALLED), true)
@@ -377,6 +391,6 @@ $(EXTRA_CMX): ocamlbuild_pack.cmx ocamlbuild_pack.cmi
 
 include .depend
 
-.PHONY: all allopt clean beforedepend
+.PHONY: all allopt beforedepend clean configure
 .PHONY: install installopt installopt_really depend
 
